--- a/client/views/listings/postSubmit/postContinue.html
+++ b/client/views/listings/postSubmit/postContinue.html
@@ -109,7 +109,7 @@
         {{else}}
           <div class="col-sm-12">
             <div class="container dottedDragDropDiv">
-              <p class="lead text-info text-center ">No images added, drag some image files here to upload</p>
+              <p class="lead text-info text-center ">Drag some image files here to upload</p>
             </div>
           </div>
         {{/each}}
