--- a/client/views/listings/listingPage/topBarListingPage.html
+++ b/client/views/listings/listingPage/topBarListingPage.html
@@ -1,25 +1,39 @@
 <template name = "topBarListingPage"> 
-    
-    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+   <nav class="topBarListing navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                
-                <a class="logo page-scroll" href="/">logo</a>
-            </div>
 
+                <a class="logo page-scroll" href="/">logo</a>
+                <!-- <a href= "{{pathFor 'search'}}" class="fa fa-search search loadSearch"> 
+                {{> searchVal}}
+                </a> -->
+      
+            </div>
+              {{> errors}}
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
+                    <li>
+                        <a class="page-scroll"> <!-- {{> loginButtons}} --></a>
+                    </li>
+                    <li class="dropdown">
+                      {{> notifications}}
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Sign In</a>
+                        <div class="adjustTop">
+                        <nav class="cl-effect-1"><a class="page-scroll" id="listingsScroll">Listings</a></nav>
+                        </div>
                     </li>
-
                     <li>
-                        <a class="page-scroll" href="{{pathFor 'postSubmit'}}">Post a Listing</a>
+                        <div class="adjustTop">
+                        <nav class="cl-effect-1"><a class="page-scroll" id="contactScroll">Contact</a></nav>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="adjustTop">
+                        <nav class="cl-effect-1"><a class="page-scroll" href="{{pathFor 'postSubmit'}}">Post a Listing</a></nav>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -27,5 +41,4 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    
 </template>
