--- a/client/stylesheets/searchOverlay.css
+++ b/client/stylesheets/searchOverlay.css
@@ -17,7 +17,6 @@
 		background-clip: padding-box;
 		border: 1px solid #999;
 		border: 1px solid rgba(0, 0, 0, .2);
-		border-radius: 3px;
 		-webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
 		box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
 		background-color: rgb(197,197,200);
@@ -282,4 +281,43 @@
 .noResults {
 	text-align: center;
 	font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#postContent {
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
+}
+
+.dropdown-menu-custom {
+    -webkit-animation: fadein .5s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein .5s; /* Firefox < 16 */
+        -ms-animation: fadein .5s; /* Internet Explorer */
+         -o-animation: fadein .5s; /* Opera < 12.1 */
+            animation: fadein .5s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
