--- a/client/views/application/searchOverlay.html
+++ b/client/views/application/searchOverlay.html
@@ -48,7 +48,7 @@
 
 
 <template name="player">
-  <div class="postContent">
+  <div class="postContent" id="postContent">
     <div class="date">
       <span><div id="month"> {{month}}</div> <p style="margin: 0px; font-size: 26px; line-height: 1; font-weight: 100"> {{day}} </p></span>
       <!-- <p style="margin: 0px">{{day}} <span> {{month}} </span></p> -->
